# rossum-user-loader

./: .gitignore  LICENSE  README.md  pyproject.toml
packaging/homebrew-tap/: README.md
packaging/homebrew-tap/Formula/: rossum-user-loader.rb
src/rossum_user_loader/: __init__.py  __main__.py  cli.py  core.py  csvio.py  excel.py  ratelimit.py  validation.py
src/rossum_user_loader/data/: user_load_template.csv
src/rossum_user_loader/web/: __init__.py  app.py  launcher.py
src/rossum_user_loader/web/templates/: index.html
templates/: user_load_template.xlsx
tests/: conftest.py  test_cli.py  test_core.py  test_csvio.py  test_launcher.py  test_ratelimit.py  test_validation.py  test_web.py
